--- a/ControlEscolar/ControlEscolar/MoreWindows/RegistrationView.xaml
+++ b/ControlEscolar/ControlEscolar/MoreWindows/RegistrationView.xaml
@@ -12,21 +12,21 @@
         WindowStartupLocation="CenterScreen"
         Background="Transparent"
         AllowsTransparency="True">
-    
+
     <Window.DataContext>
         <ViewModel:LoginViewModel/>
     </Window.DataContext>
 
     <Window.Resources>
-            <Style TargetType="Hyperlink">
-                <Setter Property="Foreground" Value="LightCyan"/>
-                <Setter Property="TextDecorations" Value="{x:Null}"/>
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="TextDecorations" Value="Underline"/>
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
+        <Style TargetType="Hyperlink">
+            <Setter Property="Foreground" Value="LightCyan"/>
+            <Setter Property="TextDecorations" Value="{x:Null}"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="TextDecorations" Value="Underline"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
         <BooleanToVisibilityConverter x:Key="BooleanToVisivility"/>
     </Window.Resources>
 
@@ -36,8 +36,8 @@
     </Window.Visibility>
 
     <Border CornerRadius="12">
-        
-        <Border CornerRadius="10" BorderThickness="2" Opacity="0.98">
+
+        <Border CornerRadius="10" BorderThickness="2" Opacity="0.98" Margin="0,1,0,-1">
             <Border.BorderBrush>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                     <GradientStop Color="#462AD8" Offset="0"/>
@@ -132,7 +132,7 @@
 
                 <StackPanel
                          Orientation="Vertical"
-                         Margin="96,40,435,-402">
+                         Margin="96,0,263,-288">
 
                     <TextBlock Text="Inscripciones"
                             Foreground="White"
@@ -141,12 +141,12 @@
                             FontFamily="Montserrat" Height="38"
                             Margin="0,10,0,0"
                             />
-                    <TextBlock Text="Nombre"
+                    <TextBlock
                             Foreground="LightGray"
                             FontWeight="Medium"
                             FontFamily="Montserrat"
                             FontSize="15"
-                            Height="23"/>
+                            Height="20"><Run Language="es-mx" Text="Carrera"/></TextBlock>
                     <TextBox x:Name="txtUser"
                           Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                           FontFamily="Montserrat"
@@ -156,7 +156,7 @@
                           CaretBrush="LightGray"
                           BorderBrush="DarkGray"
                           BorderThickness="0,0,0,2"
-                          Height="28"
+                          Height="26"
                           VerticalContentAlignment="Center"
                           HorizontalAlignment="Left"
                           Margin="0,5,0,0"
@@ -167,22 +167,12 @@
                                      AlignmentX="Left"/>
                         </TextBox.Background>
                     </TextBox>
-                    <TextBlock Text="Curp"
-                            Foreground="LightGray"
-                            FontSize="15"
-                            FontWeight="Medium"
-                            FontFamily="Montserrat"
-                            Margin="0,15,0,0"/>
-                    <customcontrols:BindablePasswordBox
-                     Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                     Height="46" Loaded="BindablePasswordBox_Loaded" 
-                     />
                     <TextBlock Text="Dirección"
                          Foreground="LightGray"
                          FontSize="15"
                          FontWeight="Medium"
                          FontFamily="Montserrat"
-                         Margin="0,10,0,0"
+                         Margin="0,10,0,0" Height="22"
                          />
 
                     <TextBlock Text="{Binding ErrorMessage}"
@@ -201,10 +191,14 @@
                             </TransformGroup>
                         </TextBlock.RenderTransform>
                     </TextBlock>
-                    <customcontrols:BindablePasswordBox
-                              Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                              Height="46" Loaded="BindablePasswordBox_Loaded" 
-                              />
+
+                    <TextBlock Text="{Binding ErrorMessage}"
+                         Foreground="Red"
+                         FontSize="12"
+                         FontWeight="Medium"
+                         FontFamily="Montserrat"
+                         Margin="0 10 0 0"
+                         TextWrapping="Wrap"/>
                     <Button x:Name="btnLogin"
                          Command="{Binding LoginCommand}"
                          BorderThickness="0"
@@ -214,7 +208,7 @@
                          FontFamily="Montserrat"
                          Cursor="Hand"
                          Click="btnLogin_Click"
-                            Margin="0,16,0,0">
+                            Height="141">
                         <Button.Style>
                             <Style TargetType="{x:Type Button}">
                                 <Setter Property="Background" Value="#462AD8"/>
@@ -236,14 +230,6 @@
                         </Button.Template>
                     </Button>
 
-                    <TextBlock Text="{Binding ErrorMessage}"
-                         Foreground="Red"
-                         FontSize="12"
-                         FontWeight="Medium"
-                         FontFamily="Montserrat"
-                         Margin="0 10 0 0"
-                         TextWrapping="Wrap"/>
-
                 </StackPanel>
                 <StackPanel
                     Orientation="Vertical"
@@ -254,31 +240,29 @@
                            FontFamily="Montserrat"
                            TextWrapping="Wrap"
                            TextAlignment="Right"
-                           Height="33" Width="278">
+                           Height="33" Width="291">
                     <Hyperlink Click="Inicio_Click">Inicio</Hyperlink>
                     <Run Text="    " />
                     <Hyperlink Click="Pagos_Click">Pagos</Hyperlink>
                     <Run Text="    " />
-                    <Run Text="Kárdex" />
+                    <Hyperlink Click="Materias_Click">Kardex</Hyperlink>
                     <Run Text="    " />
                     <Run Text="Configuración" />
-                                    </TextBlock>
-
+                    </TextBlock>
                     <Image Source="/Images/UAZlogo.png"
-                        Width="217"
-                        Height="303"/>
+                        Width="150"
+                        Height="236"
+                           Margin="130,0,0,0"/>
                 </StackPanel>
                 <StackPanel
                     Orientation="Vertical"
-                    Margin="238,88,410,-134">
-
-                   
-                    <TextBlock Text="Apellido"
+                    Margin="238,50,400,-79">
+                    <TextBlock
                         Foreground="LightGray"
                         FontWeight="Medium"
                         FontFamily="Montserrat"
                         FontSize="15"
-                        Height="23"/>
+                        Height="20"><Run Language="es-mx" Text="Grupo"/></TextBlock>
                     <TextBox x:Name="txtUser1"
                         Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                         FontFamily="Montserrat"
@@ -288,24 +272,140 @@
                         CaretBrush="LightGray"
                         BorderBrush="DarkGray"
                         BorderThickness="0,0,0,2"
-                        Height="28"
+                        Height="24"
                         VerticalContentAlignment="Center"
                         HorizontalAlignment="Left"
                         Margin="0,5,0,0"
-                        Padding="20,0,0,0" Width="124">
+                        Padding="20,0,0,0" Width="124" TextChanged="txtUser1_TextChanged">
                         <TextBox.Background>
                             <ImageBrush ImageSource="/Images/user-icon.png"
                                 Stretch="None"
                                 AlignmentX="Left"/>
                         </TextBox.Background>
                     </TextBox>
-                    
+
                 </StackPanel>
+
                 <StackPanel
+                    Orientation="Vertical"
+                    Margin="380,50,263,-94">
+                    <TextBlock Text="Semestre"
+                        Foreground="LightGray"
+                        FontWeight="Medium"
+                        FontFamily="Montserrat"
+                        FontSize="15"
+                        Height="21"/>
+                    <TextBox x:Name="txtUser4"
+                        Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
+                        FontFamily="Montserrat"
+                        FontSize="13"
+                        FontWeight="Medium"
+                        Foreground="White"
+                        CaretBrush="LightGray"
+                        BorderBrush="DarkGray"
+                        BorderThickness="0,0,0,2"
+                        Height="23"
+                        VerticalContentAlignment="Center"
+                        HorizontalAlignment="Left"
+                        Margin="0,5,0,0"
+                        Padding="20,0,0,0" Width="124" TextChanged="txtUser1_TextChanged">
+                        <TextBox.Background>
+                            <ImageBrush ImageSource="/Images/user-icon.png"
+                                Stretch="None"
+                                AlignmentX="Left"/>
+                        </TextBox.Background>
+                    </TextBox>
+
+
+                </StackPanel>
+
+
+
+
+                <StackPanel
+                    Orientation="Vertical"
+                    Margin="238,109,421,-162">
+                    <TextBlock
+                        Foreground="LightGray"
+                        FontWeight="Medium"
+                        FontFamily="Montserrat"
+                        FontSize="15"
+                        Height="21"><Run Language="es-mx" Text="Modalidad"/></TextBlock>
+                    <TextBox x:Name="txtUser3"
+                        Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
+                        FontFamily="Montserrat"
+                        FontSize="13"
+                        FontWeight="Medium"
+                        Foreground="White"
+                        CaretBrush="LightGray"
+                        BorderBrush="DarkGray"
+                        BorderThickness="0,0,0,2"
+                        Height="23"
+                        VerticalContentAlignment="Center"
+                        HorizontalAlignment="Left"
+                        Margin="0,5,0,0"
+                        Padding="20,0,0,0" Width="124" TextChanged="txtUser1_TextChanged">
+                        <TextBox.Background>
+                            <ImageBrush ImageSource="/Images/user-icon.png"
+                                Stretch="None"
+                                AlignmentX="Left"/>
+                        </TextBox.Background>
+                    </TextBox>
+
+
+                </StackPanel>
+
+
+
+                <StackPanel
+                    Orientation="Vertical"
+                    Margin="96,109,576,-162">
+                    <TextBlock
+                        Foreground="LightGray"
+                        FontWeight="Medium"
+                        FontFamily="Montserrat"
+                        FontSize="15"
+                        Height="21" Width="191" Text=""/>
+                    <TextBox x:Name="txtUser2"
+                        Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
+                        FontFamily="Montserrat"
+                        FontSize="13"
+                        FontWeight="Medium"
+                        Foreground="White"
+                        CaretBrush="LightGray"
+                        BorderBrush="DarkGray"
+                        BorderThickness="0,0,0,2"
+                        Height="23"
+                        VerticalContentAlignment="Center"
+                        HorizontalAlignment="Left"
+                        Margin="0,5,0,0"
+                        Padding="20,0,0,0" Width="124" TextChanged="txtUser1_TextChanged" RenderTransformOrigin="0.5,0.5">
+                        <TextBox.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform ScaleX="1"/>
+                                <SkewTransform/>
+                                <RotateTransform/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </TextBox.RenderTransform>
+                        <TextBox.Background>
+                            <ImageBrush ImageSource="/Images/user-icon.png"
+                                Stretch="None"
+                                AlignmentX="Left"/>
+                        </TextBox.Background>
+                    </TextBox>
+
+
+                </StackPanel>
+
+                <StackPanel
+                    
+                    
+                 
     Orientation="Vertical"
     Margin="44,385,44,-391">
-              
-                   
+
+
                     <TextBlock 
         Background="White" RenderTransformOrigin="0.5,-4.057" Height="3"
         Margin="0,0,0,10"/>
@@ -326,4 +426,13 @@
         </Border>
 
     </Border>
+
+
+
+
+
+
+
+
+
 </Window>
