--- a/ControlEscolar/ControlEscolar/View/UserRoleSelection.xaml
+++ b/ControlEscolar/ControlEscolar/View/UserRoleSelection.xaml
@@ -5,10 +5,12 @@
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         AllowsTransparency="True"
-        Background="Transparent">
+        Background="Transparent"
+        Icon="/Resources/LogoAplicacionSomosUAZmini.ico">
 
 
     <Border CornerRadius="12">
+
         <Border CornerRadius="10" BorderThickness="2" Opacity="0.98" Margin="0,14,0,-14">
             <Border.BorderBrush>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
@@ -17,6 +19,7 @@
                     <GradientStop Color="#2e2e2e" Offset="1"/>
                 </LinearGradientBrush>
             </Border.BorderBrush>
+
             <Border.Background>
                 <LinearGradientBrush StartPoint="0.1,0" EndPoint="1,1">
                     <GradientStop Color="#060521" Offset="0"/>
@@ -34,6 +37,66 @@
                     <RowDefinition Height="30">
                     </RowDefinition>
                 </Grid.RowDefinitions>
+                <Image Margin="-43,140,-43,-932" Source="/images/logoUAZblanco.png" Stretch="Fill" Grid.ColumnSpan="2"/>
+                <!-- Botón Minimizar -->
+                <Button x:Name="btnMinimizar"
+Click="btnMinimizar_Click"
+ToolTip="Minimizar"
+Cursor="Hand"
+Width="28" Height="28"
+Background="Transparent"
+BorderThickness="0"
+Margin="332,1,38,1" Grid.Column="1">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Background="{TemplateBinding Background}"
+            Width="28" Height="28"
+            x:Name="border">
+                                <TextBlock Text="―"
+                   FontSize="14"
+                   Foreground="Black"
+                   FontWeight="Bold"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"/>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="border" Property="Background" Value="#DDDDDD"/>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+
+                <!-- Botón Cerrar -->
+                <Button x:Name="btnCerrar"
+Click="btnCerrar_Click"
+ToolTip="Cerrar"
+Cursor="Hand"
+Width="28" Height="28"
+Background="Transparent"
+BorderThickness="0"
+Margin="360,1,10,1" Grid.Column="1">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Background="{TemplateBinding Background}"
+            Width="28" Height="28"
+            x:Name="border">
+                                <TextBlock Text="×"
+                   FontSize="14"
+                   Foreground="Black"
+                   FontWeight="Bold"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"/>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="border" Property="Background" Value="#FFCDD2"/>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
                 <Grid Grid.Row="0" Grid.ColumnSpan="2" Margin="0,0,0,-349">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -41,7 +104,7 @@
                         <ColumnDefinition Width="25"/>
                         <ColumnDefinition Width="5"/>
                     </Grid.ColumnDefinitions>
-                    <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center" Height="108" RenderTransformOrigin="0.5,0.5" Margin="0,140,0,0">
+                    <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Height="208" RenderTransformOrigin="0.5,0.5" Margin="138,140,0,0" Width="554">
                         <StackPanel.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
@@ -51,33 +114,47 @@
                             </TransformGroup>
                         </StackPanel.RenderTransform>
 
+
                         <TextBlock Text="Bienvenido al Sistema de la Universidad Autónoma de Zacatecas"
                                TextAlignment="Center"
                                FontSize="18"
                                FontWeight="Bold"
                                TextWrapping="Wrap"
-                               Foreground="#e8f6fe"/>
+                               Foreground="#ffffff" Height="62" Width="583"/>
 
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                            <Button Content="Estudiante" Width="120" Height="40" Click="Estudiante_Click" Margin="5"/>
-                            <Button Content="Maestro" Width="120" Height="40" Click="Maestro_Click"/>
-                            <Button Content="Administrador" Width="120" Height="40" Click="Admin_Click"/>
-                        </StackPanel>
-                        <TextBlock Text="¿Qué eres?"
+
+                        <TextBlock Text="¿Qué eres?, Porfavor selecciona tu Rol en la Escuela para Iniciar Sesión"
                                FontSize="16"
+                               TextAlignment="Center"
                                FontWeight="SemiBold"
+                               Foreground="#e8f6fe"
                                />
-                        <StackPanel
-                        Orientation="Horizontal">
-                            <Button
-                        Width="120" Margin="5" Height="40" Content="Estudiante" Click="Estudiante_Click"/>
-                            <Button
-                        Width="120" Height="40" Content="Maestro" Click="Maestro_Click"/>
-                            <Button
-                        Width="120" Height="40" Content="Administrador" Click="Admin_Click"/>
+                        <StackPanel Orientation="Horizontal" Width="304" Height="120">
+                            <Button Width="100" Height="100" Click="Maestro_Click" Background="#434343" Foreground="White" BorderBrush="Gray">
+                                <Image Source="/Images/IconoMaestro.png" Width="90" Height="90"/>
+                            </Button>
+
+                            <Button Width="100" Height="100" Click="Admin_Click" Background="#434343" Foreground="White" BorderBrush="Gray">
+                                <Image Source="/Images/IconoAdministrador.png" Width="90" Height="90"/>
+                            </Button>
+
+                            <Button Width="100" Height="100" Click="Estudiante_Click" Background="#434343" Foreground="White" BorderBrush="Gray">
+                                <Image Source="/Images/IconoEstudiante.png" Width="90" Height="90"/>
+                            </Button>
                         </StackPanel>
+
                     </StackPanel>
                 </Grid>
+
+                <Image Margin="342,23,342,-105" Source="/LogoAplicacionSomosUAZmini.png" Stretch="Fill" Grid.ColumnSpan="2">
+                    <Image.Clip>
+                        <RectangleGeometry RadiusX="20" RadiusY="20"
+                               Rect="0,0,100,100"/>
+                    </Image.Clip>
+                </Image>
+
+
+
             </Grid>
         </Border>
     </Border>
