--- a/ControlEscolar/ControlEscolar/MoreWindows/StudentRegister.xaml
+++ b/ControlEscolar/ControlEscolar/MoreWindows/StudentRegister.xaml
@@ -197,13 +197,13 @@
                 <StackPanel
                 Orientation="Vertical"
                 Margin="244,96,412,-128">
-                    <TextBlock Text="Correo Electrónico"
+                    <TextBlock Text="Edad"
                     Foreground="LightGray"
                     FontWeight="Medium"
                     FontFamily="Montserrat"
                     FontSize="15"
                     Height="20"/>
-                    <TextBox x:Name="UserEmail"
+                    <TextBox x:Name="UserAge"
                     Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                     FontFamily="Montserrat"
                     FontSize="13"
@@ -233,13 +233,13 @@
                 <StackPanel
                 Orientation="Vertical"
                 Margin="244,164,418,-192">
-                    <TextBlock Text="Telefono "
+                    <TextBlock Text="Contraseña "
                     Foreground="LightGray"
                     FontWeight="Medium"
                     FontFamily="Montserrat"
                     FontSize="15"
                     Height="21"/>
-                    <TextBox x:Name="UserTel"
+                    <TextBox x:Name="UserPassword"
                     Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                     FontFamily="Montserrat"
                     FontSize="13"
@@ -308,14 +308,14 @@ Margin="44,385,44,-391">
                 Orientation="Vertical"
                 Margin="44,164,588,-198">
 
-                                <TextBlock
+                    <TextBlock
                     Text="Fecha de Nacimiento"
                     Foreground="LightGray"
                     FontWeight="Medium"
                     FontFamily="Montserrat"
                     FontSize="15"
                     Height="33"/>
-                                <DatePicker
+                    <DatePicker
                     x:Name="UserDate"
                     Width="164"
                     Height="25"
@@ -328,7 +328,7 @@ Margin="44,385,44,-391">
                 <StackPanel
                     Orientation="Vertical"
                     Margin="44,98,574,-130">
-                    <TextBlock Text="Nombre Completo"
+                    <TextBlock Text="Nombre"
                         Foreground="LightGray"
                         FontWeight="Medium"
                         FontFamily="Montserrat"
@@ -440,13 +440,13 @@ Margin="44,385,44,-391">
                 <StackPanel
                     Orientation="Vertical"
                     Margin="408,161,248,-193">
-                    <TextBlock Text="Grado"
+                    <TextBlock Text="CURP"
                         Foreground="LightGray"
                         FontWeight="Medium"
                         FontFamily="Montserrat"
                         FontSize="15"
                         Height="20"/>
-                    <TextBox x:Name="UserGrade"
+                    <TextBox x:Name="UserCurp"
                         Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                         FontFamily="Montserrat"
                         FontSize="13"
