--- a/ControlEscolar/ControlEscolar/View/PlanEstudiosView.xaml
+++ b/ControlEscolar/ControlEscolar/View/PlanEstudiosView.xaml
@@ -7,7 +7,7 @@
         xmlns:customcontrols ="clr-namespace:ControlEscolar.CustomControls"
         xmlns:ViewModel ="clr-namespace:ControlEscolar.ViewModel"
         mc:Ignorable="d"
-        Title="PlanEstudios" Height="450" Width="800"
+        Title="PlanEstudiosView" Height="450" Width="800"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         Background="Transparent"
